--- a/iMonitoringApp/angular.json
+++ b/iMonitoringApp/angular.json
@@ -9,6 +9,10 @@
         "@ionic/angular-toolkit:page": {
           "styleext": "scss",
           "standalone": true
+        },
+        "@ionic/angular-toolkit:component": {
+          "styleext": "scss",
+          "standalone": true
         }
       },
       "root": "",
@@ -16,13 +20,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": {
-              "base": "www",
-              "browser": ""
-            },
+            "outputPath": "www",
             "index": "src/index.html",
+            "main": "src/main.ts",
             "polyfills": [
               "src/polyfills.ts"
             ],
@@ -33,11 +35,17 @@
                 "glob": "**/*",
                 "input": "src/assets",
                 "output": "assets"
+              },
+              {
+                "glob": "**/*.svg",
+                "input": "node_modules/ionicons/dist/ionicons/svg",
+                "output": "./svg"
               }
             ],
-            "styles": ["src/global.scss", "src/theme/variables.scss"],
-            "scripts": [],
-            "browser": "src/main.ts"
+            "styles": [
+              "src/global.scss"
+            ],
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -68,7 +76,7 @@
               "namedChunks": true
             },
             "ci": {
-              "progress": false
+            
             }
           },
           "defaultConfiguration": "production"
@@ -83,7 +91,7 @@
               "buildTarget": "app:build:development"
             },
             "ci": {
-              "progress": false
+              
             }
           },
           "defaultConfiguration": "development"
@@ -107,9 +115,16 @@
                 "glob": "**/*",
                 "input": "src/assets",
                 "output": "assets"
+              },
+              { 
+                "glob": "**/*.svg",
+                "input": "node_modules/ionicons/dist/ionicons/svg",
+                "output": "./svg"
               }
             ],
-            "styles": ["src/global.scss", "src/theme/variables.scss"],
+            "styles": [
+              "src/global.scss" 
+            ],
             "scripts": []
           },
           "configurations": {
@@ -119,25 +134,32 @@
             }
           }
         },
-        "lint": {
+        "lint": { 
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
           }
         }
       }
     }
   },
-  "cli": {
-    "schematicCollections": ["@ionic/angular-toolkit"]
+  "cli": { 
+    "schematicCollections": [
+      "@ionic/angular-toolkit"
+    ],
+    "analytics": false 
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
-      "styleext": "scss"
+      "styleext": "scss",
+      "standalone": true 
     },
     "@ionic/angular-toolkit:page": {
-      "styleext": "scss"
-    },
+      "styleext": "scss",
+      "standalone": true  },
     "@angular-eslint/schematics:application": {
       "setParserOptionsProject": true
     },
